# LLM_auto_featurization

./: .gitignore  README.md  argo_test.py  example_template.py  h2o_test.py  main.py  pyproject.toml  requirements.txt  start_argo_client.sh
auto_feat/: __init__.py  build_graph.py
auto_feat/LLM_API/: LLM_chat.py
auto_feat/eval_module/: evaluator.py
auto_feat/featurization_module/: __init__.py  execution.py  feat_template.py  proposal.py  utils.py
auto_feat/first_pass/: __init__.py
auto_feat/first_pass/data_clean/: __init__.py
auto_feat/first_pass/summarization/: __init__.py  summarize.py
data/: manuscript.txt
featurization_module/: feature_analyst.py  feature_generator.oy  proposal.py  utils.py
tests/: data.csv  data_check.ipynb  test_eval.py  test_eval_mod.py  test_proposal.py  test_summarization.py  tester_execution.py
